<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.zayankovsky.homework4.MainActivity">

    <view class="com.example.zayankovsky.homework4.MainActivity$CustomView"
        android:id="@+id/customView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/radioGroupFilter"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp" >

        <RadioButton
            android:id="@+id/radioBlur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/blur" />

        <RadioButton
            android:id="@+id/radioBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness" />

        <RadioButton
            android:id="@+id/radioChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupChannel"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp" >

        <RadioButton
            android:id="@+id/radioChannelRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/radioChannelGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green" />

        <RadioButton
            android:id="@+id/radioChannelBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />
</LinearLayout>
